# graphene_react

./: .env  .env.template  Makefile  README.md  Readme.md  docker-compose.yml
.github/workflows/: docker-build-test.yml  front_tests.yml
Docker/backend/: Dockerfile  docker-entrypoint.sh
Docker/frontend/: Dockerfile  docker-entrypoint.sh
Docker/nginx/: Dockerfile  docker-entrypoint.sh  nginx.conf
app/.github/workflows/: front_tests.yml
app/backend/: Makefile  manage.py  pyproject.toml
app/backend/graphene_auth/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
app/backend/graphene_auth/users/: apps.py  models.py  schema.py
app/backend/graphene_auth/users/migrations/: 0001_initial.py
app/frontend/: package-lock.json  package.json
app/frontend/public/: index.html
app/frontend/src/: App.js  App.test.js  LoginForm.js  NavBar.jsx  ex.jsx  index.js  userList.jsx
app/frontend/src/backend_helpers/: lib.js  queries.js  requests.js
app/frontend/src/components/Alert/: ErrorAlert.jsx
app/frontend/src/components/input/: TextInput.jsx
app/frontend/src/hooks/: useURQLClient.js
app/frontend/src/store/: UserReducer.js  UserReducer.test.js  index.js
app/frontend/src/store/selectors/: getUser.test.js
